--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "devDependencies": {
       "cypress-iframe": "^1.0.1"
     }
+  },
+  "devDependencies": {
+    "@types/cypress": "^1.1.3",
+    "cypress-iframe": "^1.0.1",
+    "cypress-network-idle": "^1.14.2"
   }
 }
